force-app/main/default/objects/xAL_SubAdministrativeAreas__mdt/xAL_SubAdministrativeAreas__mdt.object-meta.xml
<CustomObject>
    <label>xAL SubAdministrativeArea</label>
    <pluralLabel>xAL SubAdministrativeAreas</pluralLabel>
</CustomObject>