force-app/main/default/objects/xAL_SubAdministrativeAreas__mdt/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Value to be sent through API integration</description>
    <label>Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>