force-app/main/default/objects/xAL_SubAdministrativeAreas__mdt/fields/xAL_AdministrativeArea__c.field-meta.xml
<CustomField>
    <fullName>xAL_AdministrativeArea__c</fullName>
    <label>xAL AdministrativeArea</label>
    <referenceTo>xAL_AdministrativeArea__mdt</referenceTo>
    <relationshipLabel>xAL SubAdministrativeAreas</relationshipLabel>
    <relationshipName>xAL_SubAdministrativeAreas</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>